#289 Fix editable popup with native scrollbars.

--- a/src/stylesheets/partials/_scroll-container.scss
+++ b/src/stylesheets/partials/_scroll-container.scss
@@ -7,4 +7,8 @@
   overflow-y: scroll;
   overscroll-behavior: contain;
   contain: content; // size breaks padding-bottom of app prefs scroll-container
+
+  .popup-open:not(.scrollbar-style-old-school) & {
+    overflow-y: hidden;
+  }
 }
